--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
@@ -27,7 +28,7 @@
         </activity>
 
         <provider
-            android:name=".provider.FootballScoresProvider"
+            android:name=".Data.FootballScoresProvider"
             android:authorities="barqsoft.footballscores" />
 
         <activity
@@ -39,20 +40,17 @@
                 android:value="barqsoft.footballscores.MainActivity" />
         </activity>
 
-        <!-- Authenticator Service -->
-        <service android:name=".widget.ScoresAuthenticatorService">
+        <service android:name="barqsoft.footballscores.Services.AuthenticatorService">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
             </intent-filter>
-
             <meta-data
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
 
-        <!-- Sync Adapter Service -->
         <service
-            android:name=".widget.ScoresSyncService"
+            android:name=".Services.ScoresSyncService"
             android:exported="true"
             android:process=":sync">
             <intent-filter>
@@ -64,7 +62,6 @@
                 android:resource="@xml/syncadapter" />
         </service>
 
-        <!-- Widget -->
         <receiver android:name=".widget.AppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
